display all animation in a grid with animations - look over and understand code on next start up

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,10 +62,14 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/    
-    - assets/images/Main Characters/Red Tile/
-    - assets/images/Main Characters/Soulo/
-    - assets/tiles/    
+    # - assets/images/    
+    # - assets/images/Main Characters/Red Tile/
+    # - assets/images/Main Characters/Soulo/
+    # - assets/tiles/
+    - assets/images/tiles/red_tile.png
+    - assets/images/tiles/yellow_tile.png
+    - assets/images/tiles/green_tile.png
+    - assets/images/tiles/blue_tile.png    
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
