add text components and position spriteComponents

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ flutter:
     - assets/images/tiles/blue_tile.png    
     - assets/images/parallax/bg.png  
     - assets/images/parallax/  
+    - assets/images/actors/  
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
